# kernel-target-alignment

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
notebooks/: 01_kta_rbf_sweep.ipynb  01_kta_rbf_sweep.py  02_kta_poly_degree_and_coeff_sweeps.ipynb  02_kta_poly_degree_and_coeff_sweeps.py  kta_comprehensive_demo.ipynb  kta_comprehensive_demo.py
notebooks/demos/: 01_iris_demo.ipynb  01_iris_demo.py  02_combined_fixed_kernels.ipynb  02_combined_fixed_kernels.py  02_kta_comprehensive_demo.ipynb
notebooks/learnable/: 01_optimize_single_kernel.ipynb  01_optimize_single_kernel.py  02_combined_fixed_kernels.ipynb  02_combined_fixed_kernels.py  03_learnable_kernel_weights.ipynb  03_learnable_kernel_weights.py
notebooks/markdown_exports/: 01_iris_demo.md  01_kta_rbf_sweep.md  01_optimize_single_kernel.md  02_combined_fixed_kernels.md  02_kta_comprehensive_demo.md  02_kta_poly_degree_and_coeff_sweeps.md  03_learnable_kernel_weights.md
notebooks/sweeps/: 01_kta_rbf_sweep.ipynb  01_kta_rbf_sweep.py
src/: kta.py
src/kernel_target_alignment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/kta/: __init__.py  core.py  kernels.py  modules.py
tests/: test_kernel_consistency.py  test_kta.py  test_kta_consistency.py  test_kta_torch.py  test_learnable_kernels.py
