[project]
name = "kernel-target-alignment"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "cupy-cuda12x>=13.4.1",
    "matplotlib>=3.10.3",
    "numpy>=1.22, <2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
]
