[project]
name = "kernel-target-alignment"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "cupy-cuda12x>=13.4.1",
    "matplotlib>=3.10.3",
    "numpy>=1.22, <2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
log_cli = true
log_cli_level = "DEBUG"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["E203", "E266", "E501", "W503"]
max-line-length = 88
max-complexity = 18
select = ["B", "C", "E", "F", "W", "T4"]
exclude = [".git", "__pycache__"]
