[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["kta"]

[project]
name = "kernel-target-alignment"
version = "0.1.0"
description = "A Python implementation of Kernel Target Alignment for kernel selection and optimization in machine learning"
authors = [{name = "Elijah Whitham-Powell"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
keywords = ["kernel-methods", "machine-learning", "kernel-target-alignment", "kta", "pytorch", "numpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=1.22, <2.3.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
]

[project.urls]
Homepage = "https://github.com/whitham-powell/kernel-target-alignment"
Repository = "https://github.com/whitham-powell/kernel-target-alignment"
Issues = "https://github.com/whitham-powell/kernel-target-alignment/issues"

[project.optional-dependencies]
# gpu = ["cupy-cuda12x>=13.4.1"]
dev = [                     # for contributors / yourself during R&D
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "jupytext>=1.16",
    "nbconvert>=6.8.0"
]

# [dependency-groups]
# dev = [
#     "ipykernel>=6.29.5",
#     "jupyter>=1.1.1",
#     "pytest>=8.4.0",
#     "pytest-cov>=6.1.1",
# ]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]
# pythonpath = ["src"] # should not be needed with setuptools package-dir
log_cli = true
log_cli_level = "DEBUG"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["E203", "E266", "E501", "W503"]
max-line-length = 88
max-complexity = 18
select = ["B", "C", "E", "F", "W", "T4"]
exclude = [".git", "__pycache__"]
